{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 37,
  "lineage": "a830bcb2-db38-d0ea-3616-0033944d116b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b189a479ad2c873",
            "arn": "arn:aws:ec2:eu-north-1:314175685469:elastic-ip/eipalloc-02b189a479ad2c873",
            "domain": "vpc",
            "id": "eipalloc-02b189a479ad2c873",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-16-88-216.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.88.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:internet-gateway/igw-0a5de5f8e196a5a53",
            "id": "igw-0a5de5f8e196a5a53",
            "owner_id": "314175685469",
            "tags": {
              "Name": "lesson-5-vpc-igw",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b189a479ad2c873",
            "association_id": "eipassoc-04534986cc3fd2c79",
            "connectivity_type": "public",
            "id": "nat-0c49ddadebb447d0a",
            "network_interface_id": "eni-0b356f368168db42a",
            "private_ip": "10.0.1.114",
            "public_ip": "16.16.88.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ffcd9f51babff49",
            "tags": {
              "Name": "lesson-5-vpc-nat",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat",
              "Owner": "Artem",
              "Project": "lesson-5"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ebdf4b1b43359b6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c49ddadebb447d0a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ebdf4b1b43359b6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5de5f8e196a5a53",
            "id": "r-rtb-0b2d50707927752bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2d50707927752bb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:route-table/rtb-0ebdf4b1b43359b6f",
            "id": "rtb-0ebdf4b1b43359b6f",
            "owner_id": "314175685469",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-private-rt",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:route-table/rtb-0b2d50707927752bb",
            "id": "rtb-0b2d50707927752bb",
            "owner_id": "314175685469",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-5-vpc-public-rt",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d893cb8d8e2122e9",
            "route_table_id": "rtb-0ebdf4b1b43359b6f",
            "subnet_id": "subnet-068a4a3dcdcde09ff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d3b15f13399b90",
            "route_table_id": "rtb-0ebdf4b1b43359b6f",
            "subnet_id": "subnet-07b3c0e7b2c530a1b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002db04a37df5cd10",
            "route_table_id": "rtb-0ebdf4b1b43359b6f",
            "subnet_id": "subnet-09eb2a2c6607275f6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb16c3130ad8f8f",
            "route_table_id": "rtb-0b2d50707927752bb",
            "subnet_id": "subnet-01ffcd9f51babff49"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1626da8b9fcbc3",
            "route_table_id": "rtb-0b2d50707927752bb",
            "subnet_id": "subnet-0d485a48826e953d2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04161572a1fb24490",
            "route_table_id": "rtb-0b2d50707927752bb",
            "subnet_id": "subnet-013397176000ac714"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-068a4a3dcdcde09ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a4a3dcdcde09ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-0",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-0",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-07b3c0e7b2c530a1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b3c0e7b2c530a1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-1",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-1",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-09eb2a2c6607275f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eb2a2c6607275f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-2",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-2",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-01ffcd9f51babff49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ffcd9f51babff49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-0",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-0",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-0d485a48826e953d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d485a48826e953d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-1",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-1",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:subnet/subnet-013397176000ac714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013397176000ac714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314175685469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-2",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-2",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "vpc_id": "vpc-0ad9b3e152acc0e66"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:314175685469:vpc/vpc-0ad9b3e152acc0e66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b1906e1111a7dfd",
            "default_route_table_id": "rtb-09bcca13196506b72",
            "default_security_group_id": "sg-0f88e260a2f0608fc",
            "dhcp_options_id": "dopt-07378fc9e40eaf597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad9b3e152acc0e66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bcca13196506b72",
            "owner_id": "314175685469",
            "tags": {
              "Name": "lesson-5-vpc",
              "Owner": "Artem",
              "Project": "lesson-5"
            },
            "tags_all": {
              "Name": "lesson-5-vpc",
              "Owner": "Artem",
              "Project": "lesson-5"
            }
          }
        }
      ]
    }
  ]
}